nicer alerts/prompts with bootstrap & eModal

--- a/src/index.jade
+++ b/src/index.jade
@@ -117,5 +117,8 @@ html
     script(src="https://cdn.jsdelivr.net/gh/inndy/vue-clipboard2/dist/vue-clipboard.min.js")
     script(src="https://cdn.jsdelivr.net/gh/florian/xStore/src/xStore.min.js")
     script(src="https://cdn.jsdelivr.net/gh/graciano/mess/src/mess.min.js")
+    script(src="https://cdn.jsdelivr.net/npm/jquery")
+    script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.bundle.min.js")
+    script(src="https://rawgit.com/saribe/eModal/master/dist/eModal.min.js")
     script(src="./recipes.js")
 
