--- a/src/index.jade
+++ b/src/index.jade
@@ -27,27 +27,45 @@ html
             | Add recipes
           .card-body.container: .row
             .col
-              .form-group
+              .row.form-group: .col
                 input(type="hidden" v-model="editindex")
                 input.form-control.form-control-lg(v-model="recipe.recipeName" placeholder="Recipe name")
-                .row: .col-md-11.mx-auto
+              .row.form-group.align-items-start
+                .col-md-2: input.form-control(type="number" v-model="ingredient.amount")
+                .col-md-2: select.form-control(v-model="ingredient.unit")
+                  option(value="") Unit
+                  option(v-for="(option) in units" :value="option") {{option}}
+                .col
+                  .row#new-ingredient
+                    .col-md-2
+                      .form-check
+                        input.form-check-input(type="radio" v-model="ingForm" value="exist" id="ingExist" checked @change="clearIngredientName")
+                        label.form-check-label(for="ingExist") Existing
+                      .form-check
+                        input.form-check-input(type="radio" v-model="ingForm" value="new" id="ingNew")
+                        label.form-check-label(for="ingNew") New
+                    .col
+                      select.form-control(v-if="ingForm == 'exist'" @change="updateIngredientTexts")
+                        option(value="" data-department="") Choose existing...
+                        optgroup(v-for="(ingredients, department) in ingredientList" :label="department")
+                          option(v-for="(ingredient, name) in ingredients" :value="name" :data-department="department") {{name}}
+                      div(v-if="ingForm == 'new'")
+                        input.form-control(type="text" v-model="ingredient.name" @keydown.enter="addIngredient" placeholder="Ingredient name")
+                        .row
+                          .col
+                            select.form-control(v-model="ingredient.department")
+                              option(value="") Select department...
+                              option(v-for="department in departmentList" :value="department") {{department}}
+                          .col
+                            input.form-control(type="text" v-model="ingredient.department" @keydown.enter="addIngredient" placeholder="... or add new")
+                .col-md-1.text-right: button.btn.btn-success(@click="addIngredient")
+                  i.fas.fa-plus
+              .row: .col-md-11.mx-auto
                   h5.my-2(v-show="recipe.ingredients.length > 0") Ingredients
                   ul#new-ingredients.fa-ul.ml-4.mb-3
                     li(v-for="(ing, index) in recipe.ingredients")
                       span.fa-li.text-danger: i.fas.fa-trash(@click="deleteIngredient(index)")
                       | {{ing.amount}}{{ing.unit}} {{ing.name}}
-                .row.align-items-end
-                  .col-md-2: input.form-control(type="number" v-model="ingredient.amount")
-                  .col-md-2: select.form-control(v-model="ingredient.unit")
-                    option(v-for="(option) in units" :value="option") {{option}}
-                  .col: select.form-control(v-model="ingName.exist" @change="updateIngName('exist')")
-                    option(value="") Choose existing...
-                    option(v-for="(option) in ingredientList" :value="option") {{option}}
-                  .col
-                    input.form-control(type="text" v-model="ingName.nnew" @keyup="updateIngName('nnew')" @keydown.enter="addIngredient" placeholder="... or add new ingredient")
-                    input(type="hidden" v-model="ingredient.name")
-                  .col-md-1.text-right: button.btn.btn-success(@click="addIngredient")
-                    i.fas.fa-plus
             .col-md-2.text-right
               button.btn.btn-lg.btn-primary.mb-2(@click="addRecipe")
                 i.fas.fa-plus
