--- a/src/index.jade
+++ b/src/index.jade
@@ -19,7 +19,7 @@ html
         .row.justify-content-center
           h3.mb-4 Shopping list generator
 
-        .card.mb-4
+        #step1.card.mb-4
           .card-header
             span.fa-stack
               i.fas.fa-circle.fa-stack-2x
