--- a/src/index.jade
+++ b/src/index.jade
@@ -65,31 +65,34 @@ html
                   input#recipesFile.file-upload__input(type="file" name="files" @change="handleFileSelect")
                   button-icon.dropdown-item(text="Save" color="light" :cb="exportRecipes")
 
-          .card-body.container: .row
+          .card-body: .row
             .col
+              
+              //- Recipe metadata
               .row.form-group: .col
                 input(type="hidden" v-model="editindex")
                 input.form-control.form-control-lg(v-model="recipe.recipeName" placeholder="Recipe name")
                 .input-group
                   input.form-control(v-model="recipe.link" placeholder="Link (optional)")
                   input.form-control(v-model="recipe.comment" placeholder="Comment (optional)")
-              .row.form-group.align-items-start
-                .input-group.col-md-3
-                  input.form-control(type="number" v-model="ingredient.amount")
-                  .input-group-append
-                    button.btn.dropdown-toggle(data-toggle="dropdown") {{ ingredient.unit }}
-                    .dropdown-menu
-                      input(type="hidden" v-model="ingredient.unit")
-                      .dropdown-item(v-for="(option) in units" @click="ingredient.unit = option") {{option}}
+              
+              //- Recipe ingredients
+              h5 Ingredients
+              .row
+
+                //- Ingredient list
+                .col-md-4
+                  p(v-show="recipe.ingredients.length == 0") No ingredients yet...
+                  ul#new-ingredients.fa-ul(v-show="recipe.ingredients.length > 0")
+                    li(v-for="(ing, index) in recipe.ingredients")
+                      span.fa-li.text-danger: i.fas.fa-trash(@click="deleteIngredient(index)")
+                      | {{ing.amount}}{{ing.unit}} {{ing.name}}
+
+                //- New ingredient form
                 .col
-                  .row#new-ingredient
-                    .col-md-2
-                      .dropdown
-                        button-icon.dropdown-toggle(data-toggle="dropdown" :text="ingForm == 'exist' ? 'Existing' : 'New'")
-                        .dropdown-menu
-                          input(type="hidden" v-model="ingForm" @change="clearIngredientName")
-                          .dropdown-item(@click="ingForm = 'exist'") Existing
-                          .dropdown-item(@click="ingForm = 'new'") New
+                  .row.form-group
+
+                    //- Ingredient selection
                     .col
                       select.form-control(v-model="ingredient.name" v-if="ingForm == 'exist'" @change="updateIngredientTexts")
                         option(value="" data-department="") Choose existing ingredient...
@@ -104,13 +107,32 @@ html
                               option(v-for="department in departmentList" :value="department") {{department}}
                           .col
                             input.form-control(type="text" v-model="ingredient.department" @keydown.enter="addIngredient" placeholder="... or add new")
-                .col-md-1.text-right: button-icon(icon="plus" text="Add" color="primary" :cb="addIngredient")
-              .row: .col-md-11.mx-auto
-                  h5.my-2(v-show="recipe.ingredients.length > 0") Ingredients
-                  ul#new-ingredients.fa-ul.ml-4.mb-3
-                    li(v-for="(ing, index) in recipe.ingredients")
-                      span.fa-li.text-danger: i.fas.fa-trash(@click="deleteIngredient(index)")
-                      | {{ing.amount}}{{ing.unit}} {{ing.name}}
+
+                    //- Existing / new
+                    .col-md-3.text-right
+                      .dropdown
+                        button-icon.dropdown-toggle(data-toggle="dropdown" :text="ingForm == 'exist' ? 'Existing' : 'New'")
+                        .dropdown-menu
+                          input(type="hidden" v-model="ingForm" @change="clearIngredientName")
+                          .dropdown-item(@click="ingForm = 'exist'") Existing
+                          .dropdown-item(@click="ingForm = 'new'") New
+
+                  .row
+
+                    //- Amount & unit
+                    .col-md-4
+                      .input-group
+                        input.form-control(type="number" v-model="ingredient.amount")
+                        .input-group-append.dropdown
+                          button.btn.dropdown-toggle(data-toggle="dropdown") {{ ingredient.unit }}
+                          .dropdown-menu
+                            input(type="hidden" v-model="ingredient.unit")
+                            .dropdown-item(v-for="(option) in units" @click="ingredient.unit = option") {{option}}
+
+                    //- New ingedient action button
+                    .col-md-2: button-icon(icon="plus" text="Add" color="primary" :cb="addIngredient")
+
+            //- Recipe action buttons
             .col-md-2.text-right
               button-icon.btn-lg.mb-2(
                 :icon="editindex !== '' ? 'pen' : 'plus'"
