with 94b137a: upgrade section-title to support clicks and icons

--- a/src/index.jade
+++ b/src/index.jade
@@ -13,10 +13,10 @@ html
   body
 
     template#section-title
-      h4.section-title
+      h4.section-title(@click.stop="$emit('sectionclick')")
         span.badge.badge-dark.mr-2
           span(v-if="text") {{ text }}
-          i(v-if="icon" :icon="getIcon" :family="family")
+          i(v-if="icon" :class="getClass")
         | {{ title }}
 
     template#button-icon
