--- a/src/index.jade
+++ b/src/index.jade
@@ -65,7 +65,7 @@ html
         #step1.card.shadow.mb-4
           .card-header: .row
             .col-md-4:
-              section-title(number="1" title="Add recipes" @sectionclick="step1toggle")
+              section-title(text="1" title="Add recipes" @sectionclick="step1toggle")
               i.fas.fa-caret-down.text-light.ml-1
             .col-md-6.offset-md-2.text-right
               .dropdown#recipes-backup
